unpackaged/main/default/objects/litify_pm__Matter_Stage_Switch__c/litify_pm__Matter_Stage_Switch__c.object-meta.xml
<CustomObject>
    <label>Matter Stage Switch</label>
    <nameField>
        <displayFormat>MSS-{0}</displayFormat>
        <label>Matter Stage Switch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Stage Switches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>