unpackaged/main/default/objects/litify_pm__Matter_Stage_Switch__c/fields/litify_pm__Matter_Plan__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Matter Stage can switch to this plan</description>
    <inlineHelpText>Matter Stage can switch to this plan</inlineHelpText>
    <label>Matter Plan</label>
    <referenceTo>litify_pm__Matter_Plan__c</referenceTo>
    <relationshipLabel>Matter Stage Switches</relationshipLabel>
    <relationshipName>Matter_Stage_Switches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>