unpackaged/main/default/objects/litify_pm__Matter_Stage_Switch__c/fields/litify_pm__Matter_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Plan_Name__c</fullName>
    <formula>litify_pm__Matter_Plan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matter Plan Name</label>
    <type>Text</type>
</CustomField>