unpackaged/main/default/objects/litify_pm__Matter_Stage_Switch__c/fields/litify_pm__Matter_Stage__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Stage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Add a new Matter Plan to this Matter</description>
    <inlineHelpText>This Matter Stage can switch to ...</inlineHelpText>
    <label>Matter Stage</label>
    <referenceTo>litify_pm__Matter_Stage__c</referenceTo>
    <relationshipLabel>Matter Stage Switches</relationshipLabel>
    <relationshipName>Matter_Stage_Switches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>